# ComfyUI-omni-llm

./: .gitignore  Parameter-Explanation-and-Recommended-Settings.md  README.md  README_zh.md  __init__.py  common.py  json_to_bbox.py  llama_cpp_clean_states.py  llama_cpp_instruct_adv.py  llama_cpp_model_loader.py  llama_cpp_parameters.py  llama_cpp_unload_model.py  pyproject.toml  requirements.txt  参数说明与推荐设置.md
core/: __init__.py  dialogue_parser.py
doc/: Audio_Node_Parameters_Guide.md  Explanation of Inference Node Parameters and Recommended Settings.md  Explanation_of_Inference_Node_Parameters_and_Recommended_Settings.md  Model Recommendations and Links.md  Model_Download_Links.md  Model_Recommendations_and_Links.md  Multi_Image_Input_Usage_Guide.md  Node_Parameter_Guide.md  多图输入节点使用说明.md  推理节点参数说明与推荐设置.md  模型推荐与链接.md  模型链接.md  模型链接Model_Download_Links.md  节点参数说明.md  音频类节点参数说明.md
engine/: __init__.py  airllm_turboquant_integration.py  base_engine.py  engine_factory.py  hook_utils.py  model_detector.py  omni_engines.py  progress.py  turboquant_module.py  vl_engines.py  vram_layers.py
nodes/: __init__.py  forced_aligner_inference.py  forced_aligner_loader.py  json_to_bbox.py  llama_cpp_api_config.py  llama_cpp_api_inference.py  llama_cpp_asr_loader.py  llama_cpp_clean_states.py  llama_cpp_instruct_adv.py  llama_cpp_model_loader.py  llama_cpp_parameters.py  llama_cpp_sharded_model_loader.py  llama_cpp_tts_loader.py  llama_cpp_unified_inference.py  llama_cpp_unload_model.py  multi_image_input.py  multi_model_tts.py  role_config.py  tts_align.py  video_loader.py
support/: api_provider_presets.py  cqdm.py  gguf_layers.py  preset_anime.py  preset_asia_portrait.py  preset_audio.py  preset_building.py  preset_design.py  preset_elderly_portrait.py  preset_hyper_realistic.py  preset_image_reverse.py  preset_portrait.py  preset_universal.py  preset_video.py  preset_video_audio.py  preset_video_reverse.py  preset_western_portrait.py  prompt_enhancer_preset.py  prompt_enhancer_preset_en.py  prompt_enhancer_preset_zh.py
web/js/: apiConfigPreview.js
workflows/: llama-cpp-vlmforQo(text-image).json  llama-cpp-vlmforQo.json  omni-llm(audio).json  omni-llm(text_or_image).json  omni-llm(video).json  提示词工作流（仅供参考）.json
zh-CN/Categories/: ComfyUI-llama-cpp-vlmforQo.json  ComfyUI-omni-llm.json
zh-CN/Menus/: ComfyUI-llama-cpp-vlmforQo.json  ComfyUI-omni-llm.json
zh-CN/Nodes/: ComfyUI-llama-cpp-vlmforQo.json  ComfyUI-omni-llm.json
zh-CN/zh-CN/Nodes/: ComfyUI-omni-llm.json
