[project]
name = "ComfyUI-omni-llm"
description = "Full-modal AI inference plugin for ComfyUI - supports text, image, video, audio processing with LLM/VLM/ASR/TTS capabilities based on llama.cpp"
version = "2.0"
license = {file = "LICENSE"} 
 classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
     "Operating System :: Microsoft :: Windows",  # Windows specific
     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
]

dependencies = ["diskcache", "scipy", "numpy", "pillow", "gguf", "torch", "torchaudio", "soundfile", "transformers"]

[project.urls]
Repository = "https://github.com/Qo-qiao/ComfyUI-omni-llm"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/Qo-qiao/ComfyUI-omni-llm/wiki"
"Bug Tracker" = "https://github.com/Qo-qiao/ComfyUI-omni-llm/issues"

[tool.comfy]
PublisherId = "Qo-qiao"
DisplayName = "ComfyUI-omni-llm"
Icon = ""
includes = [] 


