[project]
name = "ComfyUI-omni-llm"
description = "Full-modal AI inference plugin for ComfyUI - supports text, image, video, audio processing with LLM/VLM/ASR/TTS capabilities based on llama.cpp"
version = "3.1.6"
license = {file = "LICENSE"} 
classifiers = [
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Environment :: GPU :: NVIDIA CUDA",
]

dependencies = [
    "diskcache",
    "scipy",
    "numpy",
    "pillow",
    "gguf",
    "torch",
    "torchaudio",
    "soundfile",
    "transformers",
    "packaging",
]

[project.optional-dependencies]
cuda = [
    "llama-cpp-python>=0.3.35"
]
cpu = [
    "llama-cpp-python>=0.3.35"
]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort"
]

[project.urls]
Repository = "https://github.com/Qo-qiao/ComfyUI-omni-llm"
Documentation = "https://github.com/Qo-qiao/ComfyUI-omni-llm/wiki"
"Bug Tracker" = "https://github.com/Qo-qiao/ComfyUI-omni-llm/issues"

[tool.comfy]
PublisherId = "Qo-qiao"
DisplayName = "ComfyUI-omni-llm"
Icon = ""
includes = []